--- a/on this day/views/index.ejs
+++ b/on this day/views/index.ejs
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/styles/styles.css" rel="stylesheet">
     <title>On this day</title>
 </head>
 <body>
-    <h1>On this day</h1>
+    <div class="main-div">
+        <div class="center-div">
+            <h1>On this day</h1>
+        </div>
+    </div>
 </body>
 </html>
