added form to page

--- a/on this day/views/index.ejs
+++ b/on this day/views/index.ejs
@@ -10,6 +10,35 @@
     <div class="main-div">
         <div class="center-div">
             <h1>On this day</h1>
+            <h2>Search for famous events and see who was born and died on any given day</h2>
+            <form >
+                <label for="search-option">Search for: </label>
+                <select name="search-option" id="search-option">
+                    <option>Events</option>
+                    <option>Births</option>
+                    <option>Deaths</option>
+                </select>
+                <label for="month">Select Month:</label>
+                <select id="month" name="month">
+                    <option value="">--Select a Month--</option>
+                    <option value="1">January</option>
+                    <option value="2">February</option>
+                    <option value="3">March</option>
+                    <option value="4">April</option>
+                    <option value="5">May</option>
+                    <option value="6">June</option>
+                    <option value="7">July</option>
+                    <option value="8">August</option>
+                    <option value="9">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+                </select>
+                <label for="day">Select Day:</label>
+                <select id="day" name="day">
+                    <option value="">--Select a Day--</option>
+                </select>
+        </form>
         </div>
     </div>
 </body>
