connected form to api

--- a/on this day/views/index.ejs
+++ b/on this day/views/index.ejs
@@ -12,8 +12,8 @@
             <h1>On this day</h1>
             <h2>Search for famous events and see who was born and died on any given day</h2>
             <form action="/search" method="POST">
-                <label for="search-option">Search for: </label>
-                <select name="search-option" id="search-option">
+                <label for="search">Search for: </label>
+                <select name="search" id="search">
                     <option>Events</option>
                     <option>Births</option>
                     <option>Deaths</option>
