--- a/on this day/views/results.ejs
+++ b/on this day/views/results.ejs
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/styles/styles.css" rel="stylesheet">
-    <title>On this day</title>
-</head>
-<body>
-    <div class="main-div">
-        <div class="center-div">
-            <h1>On this day</h1>
-            <h2>Search for famous events and see who was born and died on any given day</h2>
+<%- include("partials/header.ejs") %>
+
             <% if (results && results.length > 0) { %>
                 <p>These famous <%= search %>'s took place on the <%= day %> of <%= month %></p>
                 <% results.forEach(result => { %>
-                <p><%= result.year %></p>
+                <p>Year <%= result.year %></p>
                 <p><%= result.description %></p>
                 <p><a href="<%= result.wikipedia %>" target="_blank">Read more</a></p>
                 <% }); %>
@@ -22,8 +11,4 @@
                 <p>Sorry we failed to find your result.</p>
             <% } %>
             
-        </div>
-    </div>
-</body>
-<script src="/scripts/form.js"></script>
-</html>
+            <%- include("partials/footer.ejs") %>
