made grid layout for the results page

--- a/on this day/public/styles/styles.css
+++ b/on this day/public/styles/styles.css
@@ -12,3 +12,8 @@
     text-align: center;
 }
 
+.results-grid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+}
