--- a/on this day/views/results.ejs
+++ b/on this day/views/results.ejs
@@ -1,30 +1,31 @@
 <%- include("partials/header.ejs") %>
-
 <% if (results && results.length > 0) { %>
     <h2>Here are the <%= search %> that took place on the <%= day %> of <%= month %>:</h2>
+    <div class="results-grid">
     <% results.forEach(result => { %>
         <% if (search === 'events') { %>
             <p><%= result.description %></p>
             <p>Year: <%= result.year %></p>
         <% } else if (search === 'births') { %>
+        <div>
             <p><%= result.description %></p>
             <p>Born in <%= result.year %>:</p>
+            <% if (result.wikipedia && result.wikipedia.length > 0) { %>
+                <p>
+                    <a href="<%= result.wikipedia[0].wikipedia %>" target="_blank">
+                        Read more: <%= result.wikipedia[0].title %>
+                    </a>
+                </p>
+            <% } %>
+        </div>
         <% } else if (search === 'deaths') { %>
             <p><%= result.description %></p>
             <p>Died in <%= result.year %>:</p>
-        <% } %>
-
-        <% if (result.wikipedia && result.wikipedia.length > 0) { %>
-            <p>
-                <a href="<%= result.wikipedia[0].wikipedia %>" target="_blank">
-                    Read more: <%= result.wikipedia[0].title %>
-                </a>
-            </p>
         <% } %>
     <% }); %>
         <% } else { %>
             <p>No additional Wikipedia link available for this event.</p>
         <% } %>
-
+    </div>
             
 <%- include("partials/footer.ejs") %>
