--- a/on this day/public/styles/styles.css
+++ b/on this day/public/styles/styles.css
@@ -1,19 +1,62 @@
-.main-div {
-    width: 100%;
-    height: 100%;
-    background-color: blue;
+.fancy-font {
+    font-family: "Charm", cursive;
+    font-weight: 700;
+    font-style: normal;
 }
+
+.title {
+    color: black;
+    text-decoration: none;
+}
+
+.main-div-results {
+    width: 100%;
+    min-height: 100vh;
+    background-color: #EED3B1;
+    font-family: "Roboto Mono", monospace; 
+}
+
 
 .center-div {
     margin: 0 auto;
     width: 50%;
-    height: 100%;
-    background-color: pink;
+    background-color: #E8ECD7;
     text-align: center;
+    min-height: 100vh;
 }
+
+
 
 .results-grid {
     display: grid;
     grid-template-columns: auto auto auto;
     padding: 10px;
 }
+
+.individual-result {
+    background-color: white;
+    gap: 10px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    margin: 10px;
+}
+
+.individual-result a {
+    color: black;
+    text-decoration: underline;
+}
+
+a:link { 
+    text-decoration: none; 
+  } 
+  a:visited { 
+    text-decoration: none; 
+  } 
+  a:hover { 
+    text-decoration: none; 
+  } 
+  a:active { 
+    text-decoration: none; 
+  }
+  
