--- a/on this day/views/partials/footer.ejs
+++ b/on this day/views/partials/footer.ejs
@@ -2,4 +2,5 @@
 </div>
 </body>
 <script src="/scripts/form.js"></script>
+<script src="https://kit.fontawesome.com/602c42d7e5.js" crossorigin="anonymous"></script>
 </html>
