--- a/on this day/views/partials/header.ejs
+++ b/on this day/views/partials/header.ejs
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Oswald:wght@200..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="/styles/styles.css" rel="stylesheet">
     <title>On this day</title>
 </head>
 <body>
     <div class="main-div">
         <div class="center-div">
-            <h1>On this day</h1>
+            <h1><a href="/" class="title">On This Day <i class="fa-regular fa-calendar-days"></i></a></h1>
             <h2>Search for famous events and see who was born and died on any given day</h2>
