--- a/on this day/public/styles/styles.css
+++ b/on this day/public/styles/styles.css
@@ -9,7 +9,7 @@
     text-decoration: none;
 }
 
-.main-div-results {
+.main-div {
     width: 100%;
     min-height: 100vh;
     background-color: #EED3B1;
