--- a/on this day/views/results.ejs
+++ b/on this day/views/results.ejs
@@ -38,6 +38,7 @@
                     </a>
                 </p>
             <% } %>
+            </div>
         <% } %>
     <% }); %>
         <% } else { %>
